# conda-forge-webservices

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Dockerfile_wda  Dockerfile_wda_README.md  MANIFEST.in  Procfile  README.md  buildpack-run.sh  conda-lock.yml  conda-requirements.txt  conda-test-requirements.txt  entrypoint  entrypoint_wda  environment.yml  heroku.yml  pkg_versions.json  pyproject.toml  setup.py
.ci_support/: blah_blah.yaml
.circleci/: clean_cf_staging.py  config.yml  install_miniconda.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: automerge.yml  cache-status-data.yml  clean-and-update.yml  deploy.yml  release.yml  tests.yml  webservices-workflow-dispatch.yml  webservices.yml
bad_recipes/bad_recipe/: meta.yaml
conda_forge_webservices/: circle_ci.py  commands.py  feedstock_outputs.py  feedstocks_service.py  linting.py  staged_recipes.py  status.py  status_monitor.py  tokens.py  update_feedstocks.py  update_me.py  update_teams.py  utils.py  webapp.py
conda_forge_webservices/github_actions_integration/: __init__.py  __main__.py  api_sessions.py  automerge.py  env_management.py  linting.py  rerendering.py  utils.py  version_updating.py
conda_forge_webservices/github_actions_integration/tests/: conftest.py  test_automerge_pr.py  test_circle_is_active.py  test_env_management.py  test_github_checks.py  test_github_statuses.py  test_only_bot.py  test_optout.py  test_required_checks.py
conda_forge_webservices/html/: feedstocks.html.tmpl
conda_forge_webservices/tests/: conftest.py  test_automerge.py  test_commands.py  test_feedstock_outputs.py  test_staged_recipes.py  test_tokens.py  test_update_teams.py  test_webapp.py
conda_forge_webservices/tests/linting/: conftest.py  test_comment_on_pr.py  test_compute_lint_message.py  test_main.py
conda_forge_webservices/tests/linting/__snapshots__/: test_compute_lint_message.ambr
conda_forge_webservices/tests/linting/data/: recipe.yaml.skipme
good_recipe/: meta.yaml
recipe/: meta.yaml  recipe.yaml
recipe/blah/: meta.yaml
recipes/bad_recipe/: meta.yaml
recipes/good_recipe/: meta.yaml
recipes/hints_only/: meta.yaml
recipes/ok_recipe/: meta.yaml
scripts/: .gitignore  cache_status_data.py  clean_cf_staging.py  clean_cf_staging_channels.py  compute_next_version.py  delete_staged_recipes_token.py  release.py  run_cfep13_tests.sh  test_cfep13_copy.py  test_cfep13_endpoints.py
scripts/recipe/: LICENSE  meta.yaml
tests/: conda-forge.yml  conftest.py  meta.yaml  test_commands.py  test_live_automerge.py  test_live_linter.py  test_live_rerender.py  test_live_version_update.py
