[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conda-forge-webservices"
version = "1.0"
authors = [{ name = "Phil Elson", email = "pelson.pub@gmail.com" }]
description = "Conda Forge Webservices"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/conda-forge/conda-forge-webservices"
"Bug Tracker" = "https://github.com/conda-forge/conda-forge-webservices/issues"

[project.scripts]
update-webservices = "conda_forge_webservices.update_me:main"
cache-status-data = "conda_forge_webservices.status_monitor:cache_status_data"

[tool.setuptools]
packages = ["conda_forge_webservices"]
include-package-data = true

[tool.ruff.lint]
ignore = [
    "E203", # allow spaces before colons
]
select = ["E", "F", "W"]
preview = true

[tool.ruff.lint.pycodestyle]
max-line-length = 88
