[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm>=8",
    "tomli>=1.0.0; python_version < '3.11'",
]
build-backend = "setuptools.build_meta"

[project]
name = "conda-forge-webservices"
dynamic = ["version"]
authors = [{ name = "Phil Elson", email = "pelson.pub@gmail.com" }]
description = "Conda-forge Webservices"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/conda-forge/conda-forge-webservices"
"Bug Tracker" = "https://github.com/conda-forge/conda-forge-webservices/issues"

[project.scripts]
update-webservices = "conda_forge_webservices.update_me:main"
cache-status-data = "conda_forge_webservices.status_monitor:cache_status_data"
conda-forge-webservices-run-task = "conda_forge_webservices.github_actions_integration.__main__:main_run_task"
conda-forge-webservices-finalize-task = "conda_forge_webservices.github_actions_integration.__main__:main_finalize_task"
conda-forge-webservices-automerge = "conda_forge_webservices.github_actions_integration.__main__:main_automerge"

[tool.setuptools]
packages = ["conda_forge_webservices"]
include-package-data = true

[tool.setuptools_scm]
write_to = "conda_forge_webservices/_version.py"
write_to_template = "__version__ = '{version}'\n"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
extend-select = ["E501", "UP", "RUF"]
ignore = [
    "E203", # allow spaces before colons
]
select = [
    "E", "F", "W"
]
preview = true

[tool.ruff.lint.pycodestyle]
max-line-length = 88
